; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_take_lock_and_exit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_take_lock_and_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"thread(%llu) priority before acquiring the lock is %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"thread(%llu) priority after acquiring the lock (uncontended) is %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [59 x i8] c"thread(%llu) priority after contention by 47 thread is %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @take_lock_and_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @take_lock_and_exit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = call i32 (...) @mach_thread_self()
  %9 = call i32 @get_pri(i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = ptrtoint i8* %10 to i32
  store i32 %11, i32* %7, align 4
  %12 = call i32 @pthread_threadid_np(i32* null, i32* %6)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @T_ASSERT_EQ(i32 %13, i32 37, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15)
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @turnstile_prim_lock(i32 %17)
  %19 = call i32 (...) @mach_thread_self()
  %20 = call i32 @get_pri(i32 %19)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @T_ASSERT_EQ(i32 %21, i32 37, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0), i32 %22, i32 %23)
  %25 = call i32 @sleep(i32 8)
  %26 = call i32 (...) @mach_thread_self()
  %27 = call i32 @get_pri(i32 %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @T_ASSERT_EQ(i32 %28, i32 47, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.2, i64 0, i64 0), i32 %29, i32 %30)
  ret i8* null
}

declare dso_local i32 @get_pri(i32) #1

declare dso_local i32 @mach_thread_self(...) #1

declare dso_local i32 @pthread_threadid_np(i32*, i32*) #1

declare dso_local i32 @T_ASSERT_EQ(i32, i32, i8*, i32, i32) #1

declare dso_local i32 @turnstile_prim_lock(i32) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
